--- a/experience/screen.css
+++ b/experience/screen.css
@@ -9,6 +9,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* Begin site styles below */
 
 /* Base style elements */
+
 #contenido {
   background-color: #686256;
   font-family: 'Asul', sans-serif,"Comic Sans MS", "Comic Sans", cursive;
@@ -47,7 +48,7 @@ h2 {
   line-height: 1em;/*  1/3 */
 }
 p {
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 1.333em;
   font-family: 'Asul', sans-serif,"Comic Sans MS", "Comic Sans", cursive;
   color: #201201;
@@ -78,7 +79,6 @@ nav a {
   font-size: x-large;
 }
 
-
 #contenido {
   background-color: #686256;
 }
@@ -93,7 +93,7 @@ nav a {
   grid-column: 1;
   grid-row: 1;
   background-color: #587e76;
-  max-width: unset;/* 29.563em;*/
+  max-width: 29.563em;
   padding: 0.625em;
   border: solid;
   border-color: #c1502e;
@@ -104,12 +104,11 @@ nav a {
   grid-column: 1;
   grid-row: 2;
   background-color: #587e76;
-  max-width: unset;/* 29.563em;*/
+  max-width: 29.563em;
   padding: 0.625em;
   border: solid;
   border-color: #c1502e;
   align-self: center;
-  font-size: 1.3em;
 }
 #biopicture {
   margin-left: auto;
@@ -127,12 +126,8 @@ nav a {
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 0.625em;
   grid-auto-rows: min-content;
-  max-width: unset;/* 29.563em;*/
+  max-width: 29.563em;
   padding: 0.625em;
-  font-size: 1.3em;
-}
-#studies .collapsible{
-  font-size: 1.3em;
 }
 #studies h2 {
   grid-column: 1;
@@ -157,7 +152,7 @@ ol li {
   list-style-position: inside;
   list-style-type: none;
   line-height: 1.33em;
-  font-size: 1.1em;
+  font-size: 0.9em;
   column-count: 1;
 }
 footer li {
@@ -169,7 +164,7 @@ ul li {
   list-style-position: inside;
   list-style-type: circle;
   padding: 0.1em;
-  font-size: 1.2em;
+  font-size: 1em;
   color: #201201; 
   padding-left: 1.3em;
   padding-bottom: 0.5em;
@@ -179,10 +174,10 @@ nav ul li{
 }
 #experience {
   grid-column: 1;
-  grid-row: 4;
+  grid-row: 1;
   display: grid;
   background-color: #587e76;
-  max-width: unset;/* 29.563em;*/
+  max-width: unset;
   padding: 0.625em;
   border: solid;
   border-color: #c1502e;
@@ -204,10 +199,10 @@ nav ul li{
 }
 #skills {
   grid-column: 1;
-  grid-row: 5;
+  grid-row: 2;
   display: grid;
   background-color: #587e76;
-  max-width: unset;/* 29.563em;*/
+  max-width: 29.563em;
   padding: 0.625em;
   border: solid;
   border-color: #c1502e;
@@ -240,30 +235,23 @@ nav ul li{
   background-color:#c1502e;
 }
 .content {
-  display: none;
-  overflow: hidden;
+  display: block;
+  overflow: block;
+
 }
+.content li{
+  display: flex;
+  overflow: block;
+}
+
 .button {
   border: #c1502e;
   background-color: #587e76;
 }
-<<<<<<< HEAD
-@media only screen and (min-width: 50.25em) {
-=======
 @media only screen and (min-width: 31.25em) {
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
-  p{
-    font-size: 1.5 em;
-  }
-  ul li {
-    font-size: 1.5 em;
-  }
-  ol li{
-    font-size: 1.2 em;
-  }
   #resume {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(6.25em, auto);
   }
   section{
@@ -288,7 +276,6 @@ nav ul li{
     max-width: unset;
     padding: 0.625em;
     align-self: center;
-    font-size: 1.3em;
   }
   #studies {
     display: grid;
@@ -297,11 +284,8 @@ nav ul li{
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0.625em;
     grid-auto-rows: min-content;
-    max-width: unset; /*29.563em;*/
+    max-width: 29.563em;
     padding: 0.625em;
-  }
-  #studies .collapsible{
-    font-size: 1.3em;
   }
   #studies h2 {
     grid-column: 1;
@@ -327,6 +311,8 @@ nav ul li{
     list-style-type: none;
     line-height: 1.33em;
     column-count: 1;
+    font-size: 1.3em;
+
   }
   footer li {
     color: antiquewhite;
@@ -337,7 +323,7 @@ nav ul li{
     list-style-position: inside;
     list-style-type: circle;
     padding: 0.1em;
-    /* font-size: 1em;*/
+    font-size: 1.2em;
     padding-left: 1.3em;
     padding-bottom: 0.5em;
   }
@@ -345,12 +331,12 @@ nav ul li{
     list-style-type: none;
   }
   #experience {
-    grid-column: 2/4;
-    grid-row: 3;
+    grid-column: 1;
+    grid-row: 1;
     display: grid;
     max-width: unset;
     padding: 0.625em;
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
   #experience h2 {
     grid-column: 1;
@@ -358,9 +344,6 @@ nav ul li{
     align-content: center;
     align-self: center;
     align-items: center;
-  }
-  #studies .collapsible{
-    font-size: 1.3em;
   }
   #esperanza-logo {
     max-width: 22%;
@@ -371,13 +354,11 @@ nav ul li{
     padding: 0.5em;
   }
   #skills {
-    grid-column: 1/4;
-    grid-row: 4;
+    grid-column: 1;
+    grid-row: 2;
     display: grid;
     max-width: unset;
     padding: 0.625em;
-  }
-  #skills ul li{
     font-size: 1.2em;
   }
   #skills h2 {
@@ -397,75 +378,20 @@ nav ul li{
   }
 }
 @media only screen and (min-width: 58.375em) {
-  p{
-    font-size: 1.5 em;
-  }
-  ul li {
-    font-size: 1.5 em;
-  }
-  ol li{
-    font-size: 1.2 em;
-  }
-  h1 {
-    font-size: 2.5em;
-  }
-<<<<<<< HEAD
-  #studies{
-    max-width: unset; 
-  }
-=======
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
   #biopicture {
     margin-left: auto;
     margin-right: auto;
     grid-column: 1/2;
     max-width: 56.25em;
   }
-<<<<<<< HEAD
-  #bio {
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 1.3em;
-  }
-=======
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
-  #skills ol{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: unset;
-<<<<<<< HEAD
-    font-size: 1.2em;
-=======
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
-  }
-  #skills ol li{
-    flex: 1 1 35em;
-    float: left ;
-<<<<<<< HEAD
-    font-size: 1.2em;
-  }
-}
-@media only screen and (min-width: 120em) {/*89.375em*/
-=======
-  }
 }
 @media only screen and (min-width: 89.375em) {
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
-  p{
-    font-size: 1.5 em;
-  }
-  ol li{
-    font-size: 1.2 em;
-  }
-  ul li {
-    font-size: 1.5 em;
-  }
   h1 {
     font-size: 2.5em;
   }
   #resume {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: auto;
   }
   #biopic {
@@ -473,24 +399,22 @@ nav ul li{
     grid-row: 1/2;
     display: grid;
     max-width: 100%;
-    /*padding: 1.25em;*/
+    padding: 1.25em;
   }
   #bio {
-    /*height: 43.375em;*/
+    height: 43.375em;
     grid-column: 3/4;
     grid-row: 1 / 2;
     max-width: unset;
     padding: 1em;
     line-height: 1.5em;
-    font-size: 1.33em;
+    font-size: 1.2em;
     align-self: center;
-    min-height: 95%;
   }
   #biopicture {
     margin-left: auto;
     margin-right: auto;
     grid-column: 1;
-    grid-row:  1 / 2;
     max-width: 56.25em;
     align-self: center;
   }
@@ -503,13 +427,6 @@ nav ul li{
     grid-auto-rows: min-content;
     max-width: unset;
     padding: 0.625em;
-    font-size: 1.3em;
-  }
-  #studies ul li{
-    font-size: 1.3em;
-  }
-  #studies .collapsible{
-    font-size: 1.2em;
   }
   #studies h2 {
     grid-column: 1;
@@ -531,13 +448,18 @@ nav ul li{
     max-width: unset;
   }
   #experience {
-    grid-column: 2/4;
-    grid-row: 2;
+    grid-column: 1;
+    grid-row: 1;
     display: grid;
     background-color: #587e76;
     max-width: unset;
     padding: 0.625em;
+  }
+  #experience ol li{
     font-size: 1.3em;
+  }
+  #experience ul li{
+    font-size: 1.2em;
   }
   #experience h2 {
     grid-column: 1;
@@ -566,21 +488,24 @@ nav ul li{
     display: flex;
     flex-wrap: wrap;
     flex-direction: unset;
-<<<<<<< HEAD
-    font-size: 1.3em;
-=======
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
+    font-size: 1.2em;
   }
   #skills ol li{
-    flex: 1 0 40em;
+    flex: 1 0 auto;
     float: left ;
-<<<<<<< HEAD
     max-width: 31%;
-    font-size: 1.0em;
+    font-size: 1.2em;
     padding: .5em;
-=======
-    max-width: 33.33%;
->>>>>>> a11282d9b502f70c224bddf86780582eddbaa259
+    display:block;
+  }
+  #skills .content{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #skills .content li{
+    flex: 1 0 auto;
+    float:left;
+    max-width: unset;
   }
   #skills h2 {
     grid-column: 1;
